--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,8 @@
     <style name="Base.Theme.Hotels_test_task" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:windowFullscreen">true</item>
+<!--        <item name="windowActionBar">true</item>-->
     </style>
 
     <style name="Theme.Hotels_test_task" parent="Base.Theme.Hotels_test_task" />
