--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -9,11 +9,14 @@
 
     <TextView
         android:id="@+id/toolbar_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
+        android:gravity="center"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:layout_marginHorizontal="64dp"
         android:layout_centerInParent="true"
-
         android:layout_marginTop="20dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="@font/sf_pro_medium"
