--- a/app/src/main/res/layout/fragment_hotel.xml
+++ b/app/src/main/res/layout/fragment_hotel.xml
@@ -1,14 +1,423 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".screens.hotel.HotelFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".screens.hotel.HotelFragment">
+    android:layout_height="match_parent">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:background="@color/screens_background">
 
-</FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/shape_hotel_background">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <androidx.viewpager.widget.ViewPager
+                    android:id="@+id/hotel_fragment_viewpager"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    />
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginBottom="8dp"
+                    app:cardCornerRadius="5dp"
+                    android:background="@color/white"
+                    app:cardElevation="0dp">
+
+                    <me.relex.circleindicator.CircleIndicator
+                        android:id="@+id/hotel_fragment_indicator"
+                        android:layout_width="match_parent"
+                        android:layout_height="18dp"
+
+                        android:layout_marginHorizontal="10dp"
+
+                        app:ci_drawable="@drawable/shape_indicator_circle"
+
+
+                        android:elevation="4dp"/>
+
+                </androidx.cardview.widget.CardView>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.cardview.widget.CardView
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="5dp"
+
+                app:cardElevation="0dp">
+
+                <LinearLayout
+                    android:background="@color/rating_five_background"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="5dp"
+
+                        android:src="@drawable/baseline_star_24"
+                        />
+
+                    <TextView
+                        android:id="@+id/hotel_fragment_rating"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:fontFamily="@font/sf_pro_medium"
+                        android:textSize="16sp"
+                        android:textColor="@color/yellow"
+                        tools:text="5"/>
+
+                    <TextView
+                        android:id="@+id/hotel_fragment_rating_name"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:fontFamily="@font/sf_pro_medium"
+                        android:textSize="16sp"
+                        android:textColor="@color/yellow"
+                        android:layout_marginVertical="5dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginStart="5dp"
+
+                        tools:text="Превосходно"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:id="@+id/hotel_fragment_hotel_name"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:fontFamily="@font/sf_pro_medium"
+                android:textSize="22sp"
+                android:textColor="@color/black"
+
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="8dp"
+
+                tools:text="Название"/>
+
+            <TextView
+                android:id="@+id/hotel_fragment_hotel_address"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:fontFamily="@font/sf_pro_medium"
+                android:textSize="14sp"
+                android:textColor="@color/blue"
+
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="8dp"
+
+                tools:text="Адрес"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginVertical="16dp"
+                android:layout_marginHorizontal="16dp">
+
+                <TextView
+                    android:id="@+id/hotel_fragment_minimal_price"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:fontFamily="@font/sf_pro_semibold"
+                    android:textSize="30sp"
+                    android:textColor="@color/black"
+
+                    tools:text="@string/minimal_price"/>
+
+                <TextView
+                    android:id="@+id/hotel_fragment_price_for_it"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:fontFamily="@font/sf_pro_regular"
+                    android:textSize="16sp"
+                    android:textColor="@color/gray"
+
+                    android:layout_marginStart="8dp"
+
+                    tools:text="за ..."/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="12dp"
+            android:background="@drawable/shape_items_background"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+
+                android:fontFamily="@font/sf_pro_medium"
+                android:text="@string/about_hotel"
+                android:textColor="@color/black"
+
+
+                android:textSize="22sp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/hotel_fragment_rv_peculiarities"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="8dp" />
+
+            <TextView
+                android:id="@+id/hotel_fragment_description"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:fontFamily="@font/sf_pro_regular"
+                android:textSize="16sp"
+                android:textColor="@color/black_ninety"
+
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="4dp"
+
+                tools:text="Описание"/>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="0dp"
+                android:layout_marginVertical="16dp">
+
+                <LinearLayout
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:background="@color/peculiarities_item_background"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:id="@+id/hotel_fragment_comforts_button"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="15dp"
+                        android:layout_marginTop="15dp">
+
+                        <ImageView
+                            android:id="@+id/layout_hotel_comfort"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_comfort"
+                            android:layout_alignParentStart="true"
+                            android:layout_centerVertical="true"/>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_toEndOf="@id/layout_hotel_comfort"
+                            android:orientation="vertical"
+                            android:layout_marginStart="12dp">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/comfort"
+                                android:textColor="@color/text_tertiary"
+                                android:fontFamily="@font/sf_pro_medium"
+                                android:textSize="16sp"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/essential"
+                                android:textColor="@color/gray"
+                                android:fontFamily="@font/sf_pro_medium"
+                                android:textSize="14sp"/>
+
+                        </LinearLayout>
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/round_arrow_forward_ios_24"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true" />
+
+                    </RelativeLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/gray_fifteen"
+                        android:layout_marginVertical="10dp"
+                        android:layout_marginStart="52dp"
+                        android:layout_marginEnd="15dp"/>
+
+                    <RelativeLayout
+                        android:id="@+id/hotel_fragment_what_in_button"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="15dp">
+
+                        <ImageView
+                            android:id="@+id/layout_hotel_what_in"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_what_in"
+                            android:layout_alignParentStart="true"
+                            android:layout_centerVertical="true"/>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_toEndOf="@id/layout_hotel_what_in"
+                            android:orientation="vertical"
+                            android:layout_marginStart="12dp">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/what_in"
+                                android:textColor="@color/text_tertiary"
+                                android:fontFamily="@font/sf_pro_medium"
+                                android:textSize="16sp"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/essential"
+                                android:textColor="@color/gray"
+                                android:fontFamily="@font/sf_pro_medium"
+                                android:textSize="14sp"/>
+
+                        </LinearLayout>
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/round_arrow_forward_ios_24"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true" />
+
+                    </RelativeLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/gray_fifteen"
+                        android:layout_marginVertical="10dp"
+                        android:layout_marginStart="52dp"
+                        android:layout_marginEnd="15dp"/>
+
+                    <RelativeLayout
+                        android:id="@+id/hotel_fragment_what_not_in_button"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="15dp"
+                        android:layout_marginBottom="15dp">
+
+                        <ImageView
+                            android:id="@+id/layout_hotel_what_not_in"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_what_not_in"
+                            android:layout_alignParentStart="true"
+                            android:layout_centerVertical="true"/>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_toEndOf="@id/layout_hotel_what_not_in"
+                            android:orientation="vertical"
+                            android:layout_marginStart="12dp">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/what_not_in"
+                                android:textColor="@color/text_tertiary"
+                                android:fontFamily="@font/sf_pro_medium"
+                                android:textSize="16sp"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/essential"
+                                android:textColor="@color/gray"
+                                android:fontFamily="@font/sf_pro_medium"
+                                android:textSize="14sp"/>
+
+                        </LinearLayout>
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/round_arrow_forward_ios_24"
+                            android:layout_alignParentEnd="true"
+                            android:layout_centerVertical="true" />
+
+                    </RelativeLayout>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/hotel_fragment_to_room_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="28dp"
+                android:background="@drawable/shape_button"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:fontFamily="@font/sf_pro_medium"
+                android:textSize="16sp"
+                android:text="@string/to_choose_room"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+</ScrollView>
