--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,4 +8,12 @@
     </style>
 
     <style name="Theme.Hotels_test_task" parent="Base.Theme.Hotels_test_task" />
+
+    <style name="MyTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="hintTextAppearance">@style/MyHintText</item>
+    </style>
+
+    <style name="MyHintText" parent="TextAppearance.MaterialComponents.Caption">
+        <item name="android:textSize">12sp</item>
+    </style>
 </resources>
